--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,10 @@
     "jsx": false                                // enable JSX
   },
 
+  "parserOptions": {
+        "ecmaVersion": 2017
+  },
+  
   "env": {
     "browser": true,     // browser global variables.
     "node": false,        // Node.js global variables and Node.js-specific rules.
@@ -29,6 +33,7 @@
     "jquery": false,      // jquery global variables.
     "prototypejs": false, // prototypejs global variables.
     "shelljs": false,     // shelljs global variables.
+    "es6": true
   },
 
   "globals": {
