--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,31 @@
-name: Converted Workflow
+name: Node.js CI
 on:
   push:
-    branches:
-      - master
+    branches: [ main ]
   pull_request:
-    branches:
-      - master
+    branches: [ main ]
 jobs:
   build:
     runs-on: '${{ matrix.os }}'
     strategy:
       matrix:
         os:
-          - ubuntu-18.04
+          - ubuntu-latest
         node-version:
           - 14.x
     steps:
-      - name: 'Set up Node.js ${{ matrix.node-version }}'
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: '${{ matrix.node-version }}'
-      - uses: actions/checkout@v2
+
+      - name: Install and test
+        run: |
+          npm ci
+          npm test
+      
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: .
